<resources>
    <string name="error_field_required">Country field is required</string>
    <string name="logic_title">Login</string>
    <string name="logic_action">Login</string>
    <string name="login_password_hint">Password</string>
    <string name="login_username_hint">Username</string>
    <string name="login_country_hint">Country</string>
    <string name="login_country_error">You have to select a country</string>
    <string name="side_menu_orders">Orders</string>
    <string name="side_menu_schedule">Schedule</string>
    <string name="side_menu_cash_report">Order History</string>
    <string name="side_menu_logout">Logout</string>
    <string name="side_menu_open">Open</string>
    <string name="side_menu_close">Close</string>
    <string name="side_menu_version">Version %1$s</string>
    <string name="side_menu_rider_name">%1$s %2$s</string>
    <string name="main_activity_deliver_before">Deliver before: %1$s</string>
    <string name="ready_to_work_clock_in">Clock in</string>
    <string name="empty_list_header">Check your foodbox, wear\nyour helmet and  take a deep breath</string>
    <string name="empty_list_text">New orders are coming soon!</string>
    <string name="empty_list_pull_description">To refresh pull down</string>
    <string name="base_empty_list">No data found</string>
    <string name="empty_list_country"><b>Downloading country list</b>\n Wait a few seconds or check your connection.</string>
    <string name="empty_list_schedule"><b>No planned shift today</b>\n If you feel this is wrong, contact your manager for assistance</string>
    <string name="empty_list_cash_report">Looks like no order was delivered in the past 15 days</string>
    <string name="task_details_canceled">One of the orders assigned to you just got canceled</string>
    <string name="task_details_canceled_dismiss">OK</string>
    <string name="task_details_address">Address:</string>
    <string name="task_details_comment">Comment:</string>
    <string name="task_details_vendor_name">Restaurant name:</string>
    <string name="task_details_vendor_name_at_customer">Ordered from Restaurant:</string>
    <string name="task_details_go_to">Go to %1$s</string>
    <string name="task_details_call">Call</string>
    <string name="task_details_pick_up">Pick up</string>
    <string name="task_details_delivery">Delivery</string>
    <string name="task_details_halal">Make sure you put the food in the green box</string>
    <string name="task_details_not_halal">Make sure you put the food in the orange box</string>
    <string name="dialog_please_wait">Please wait…</string>
    <string name="error_start_point_not_found">Starting Point not found</string>
    <string name="error_gps_disabled">Gps is disabled</string>
    <string name="error_gps_permission_disabled">GPS Permission denied</string>
    <string name="error_no_map_application">There is no map application in your device.</string>
    <string name="dialog_phone_title">Select Phone Number</string>
    <string name="dialog_phone_customer">Customer Phone</string>
    <string name="dialog_phone_restaurant">Restaurant Phone</string>
    <string name="dialog_phone_not_data">Customer and vendor phone numbers will be shown when you have an order assigned</string>
    <string name="dialog_phone_not_numbers">This order doesn\'t contain any number</string>
    <string name="country_select_title">Select your country</string>
    <string name="country_select">Select</string>
    <string name="language_select_title">Select your language</string>
    <string name="action_ready_to_work">I\'m ready to work</string>
    <string name="action_driving">I\'m driving there</string>
    <string name="action_at_pick_up">I\'m at pickup</string>
    <string name="action_at_delivery">I\'m at delivery</string>
    <string name="action_at_picked_up">I picked up</string>
    <string name="action_at_delivered">I delivered</string>
    <string name="route_stop_details_my_location">My Location</string>
    <string name="route_error">This route action is not supported</string>
    <string name="stop_list_done">Done</string>
    <string name="schedule_list_working_hours">%1$s till %2$s</string>
    <string name="schedule_list_today">Today</string>
    <string name="schedule_list_tomorrow">Tomorrow</string>
    <string name="gcm_defaultSenderId">975393205483</string>
    <string name="route_action_pay">Pay %1$s</string>
    <string name="route_action_pick_up">Pick up %1$s Item(s)</string>
    <string name="route_action_change">Prepare Change</string>
    <string name="route_action_change_description">Customer informed us he will pay with a banknote worth %1$s …make sure you have enough change</string>
    <string name="route_action_deliver">Deliver %1$s Item(s)</string>
    <string name="route_action_collect">Collect %1$s</string>
    <string name="route_action_details">Details:</string>
    <string name="route_action_restaurant">Restaurant:</string>
    <string name="route_action_last_step">Last Step</string>
    <string name="route_action_up_step">Next Step</string>
    <string name="route_action_halal">Halal order</string>
    <string name="route_action_not_halal">Non-Halal order</string>
    <string name="route_action_halal_description">Put the food in the green box!</string>
    <string name="route_action_not_halal_description">Put the food in the orange box!</string>
    <string name="route_action_pre_order_title">Preorder for %1$s</string>
    <string name="route_action_pre_order_empty_title">Preorder</string>
    <string name="route_action_pre_order_description">Please arrive just in time. Not early, not late</string>
    <string name="route_action_pre_order_adapter_description">Please try to arrive to customer just in time</string>
    <string name="cash_report_total">Total %1$s</string>
    <string name="cash_report_cancelled">Cancelled</string>
    <string name="content_description_empty_list">Urban Ninja logo</string>
    <string name="content_description_list_item_action_stop">Action icon</string>
    <string name="content_description_login_fragment">Urban Ninja logo</string>
    <string name="content_description_route_option_go_to">Go to icon</string>
    <string name="content_description_route_option_expand">Expand layout icon</string>
    <string name="content_description_navigation_rider_icon">Rider profile photo</string>
    <string name="content_description_cash_report_arrow">Cash report extent arrow</string>
    <string name="payment_method_already_paid">Already Paid</string>
    <string-array name="language_names">
        <item name="english">English</item>
        <item name="chinese">中文</item>
    </string-array>
    <string-array name="language_codes">
        <item name="english">en</item>
        <item name="chinese">zh</item>
    </string-array>
    <string name="delivery_zone_outside_title">Go to %1$s</string>
    <string name="delivery_zone_outside"><b>Clock in is allowed only:</b>\n
        - within your delivery zone\n
        - 100m around your starting point\n
        You seem not to be in any of the places above.\n
        <b>Please change your position and try to clock in again</b></string>
    <string name="delivery_zone_no_location_title">Activate GPS</string>
    <string name="delivery_zone_no_location">It looks like your GPS settings are not properly setup.\n
        Please click on the link below and make sure you allow Urban Ninja to locate you while your\'re working\n
        <b>Note:</b> it\'s not possible to work without GPS anabled</string>
    <string name="delivery_zone_successful_title">You successfully Clocked in!</string>
    <string name="delivery_zone_successful">You just successfully started you shift.You will now be able to receive new orders.</string>
    <string name="delivery_zone_outside_label">OK, I\'ll get closer</string>
    <string name="delivery_zone_no_location_label">go to gps setting</string>
    <string name="delivery_zone_successful_label">OK, let\'s start to work</string>
    <string name="multi_pickup">Multi Pickup</string>
    <string name="multi_pickup_alert_title">Multiple Pickup!</string>
    <string name="multi_pickup_alert_details"><![CDATA[Orders <b>%1$s </b>will need to be picked up from the same restaurant.<br />]]></string>
    <string name="issue_collection_report">! Report an issue</string>
    <string name="issue_collection_warning_dialog_title">Be aware that an investigation will follow</string>
    <string name="issue_collection_warning_dialog_text">To avoid the fraud, whenever a report is submitted an investigation process
    follows where wa make sure that what you report is the true.\n\nOn the other hand, if you don\'t report an issue you will
    be liable for any COD difference</string>
    <string name="issue_collection_warning_dialog_ok">I Understand</string>
    <string name="issue_collection_report_success_title">Issue was successfully reported</string>
    <string name="issue_collection_report_success_text">Your issue with cash collection was successfully reported.
        Somebody from the delivery team with get this checked</string>
    <string name="issue_collection_report_success_ok">OK, got it</string>
    <string name="issue_collection_report_title">Cannot collect full amount?</string>
    <string name="issue_collection_report_text">Please select the amount that you could actually collect</string>
    <string name="issue_collection_report_amount_collected">Amount Collected</string>
    <string name="issue_collection_report_reason">Reason for difference</string>
    <string name="issue_collection_report_ok">Report issue</string>
    <string name="issue_collection_empty_fields">Please fill all field before sending collection issue report</string>
    <string name="issue_collection_reason_wrong_items">Wrong item(s)</string>
    <string name="issue_collection_reason_missing_items">Missing item(s)</string>
    <string name="issue_collection_reason_damaged_items">Damaged item(s)</string>
    <string name="issue_collection_reason_other">Other</string>
    <string name="issue_collection_report_sent">You report has been collected.</string>
    <string name="issue_vendor_customer_selection_title">What kind of issue do you have?</string>
    <string name="issue_vendor_customer_selection_description">Please select one of the following options.</string>
    <string name="issue_vendor_customer_selection_first_action_title">With Vendor</string>
    <string name="issue_vendor_customer_selection_first_action_description">Food is not ready; Address in not clear; etc</string>
    <string name="issue_vendor_customer_selection_second_action_title">With Customer</string>
    <string name="issue_vendor_customer_selection_second_action_description">Unreachable; Does not want to pay; etc</string>
    <string name="issue_vendor_title">Issue related to the vendor?</string>
    <string name="issue_vendor_first_action_title">Call vendor</string>
    <string name="issue_vendor_first_action_description">Always remember to be polite and not intrusive</string>
    <string name="issue_vendor_second_action_title">Report issue</string>
    <string name="issue_vendor_second_action_description">You will be redirected to an easy to use google form</string>
    <string name="issue_customer_title">Issue related to the customer?</string>
    <string name="issue_customer_first_action_title">Call Customer</string>
    <string name="issue_customer_first_action_description">Always remember to be polite and not intrusive</string>
    <string name="issue_customer_second_action_title">Report issue</string>
    <string name="issue_customer_second_action_description">You will be redirected to an easy to use google form</string>
    <string name="fake_location_dialog_title">Are you faking your gps position?</string>
</resources>