<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">

            <com.foodpanda.urbanninja.ui.widget.OpenSansTextView
                style="@style/TextView"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/icon_refresh"
                android:text="@string/empty_list_pull_description"/>
        </LinearLayout>

        <ImageView
            style="@style/ImageView"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/content_description_empty_list"
            android:paddingBottom="@dimen/padding_large"
            android:paddingTop="@dimen/padding_empty_description"
            android:src="@drawable/circle_standby"/>

        <com.foodpanda.urbanninja.ui.widget.OpenSansTextView
            style="@style/TextView.Title"
            android:layout_gravity="center_horizontal"
            android:text="@string/empty_list_text"/>

        <com.foodpanda.urbanninja.ui.widget.OpenSansTextView
            style="@style/TextView.Description"
            android:layout_gravity="center_horizontal"
            android:text="@string/empty_list_header"/>

    </LinearLayout>
</ScrollView>
