<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    style="@style/CardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_small"
    app:cardCornerRadius="@dimen/margin_tiny_tiny"
    app:cardElevation="@dimen/card_elevation"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_default"
            android:paddingRight="@dimen/padding_default">

            <ImageView
                android:id="@+id/image_stop_icon"
                style="@style/ImageView"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/content_description_list_item_action_stop"
                android:src="@drawable/icon_pay_restaurant"/>

            <com.foodpanda.urbanninja.ui.widget.OpenSansTextView
                android:id="@+id/txt_stop_name"
                style="@style/TextView.Title.WithoutPaddingMargin"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <View
            style="@style/DividerView"/>

        <LinearLayout
            android:id="@+id/layout_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:clickable="false"
            android:orientation="vertical">


            <com.foodpanda.urbanninja.ui.widget.OpenSansTextView
                style="@style/TextView.CardDescription"
                android:text="@string/route_action_details"/>

            <com.foodpanda.urbanninja.ui.widget.OpenSansTextView
                android:id="@+id/txt_stop_description"
                style="@style/TextView.Dark.Multiline"/>

            <View
                style="@style/DividerView"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox_done"
            style="@style/TextView.Dark.AllCaps"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/check_box_done_height"
            android:text="@string/stop_list_done"/>
    </LinearLayout>
</android.support.v7.widget.CardView>

